--- a/environment.yml
+++ b/environment.yml
@@ -8,44 +8,43 @@ dependencies:
   - async_generator=1.10=pyhd3eb1b0_0
   - attrs=20.3.0=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=2.108=mkl
-  - blas-devel=3.9.0=8_mkl
+  - blas=1.0=mkl
   - bleach=3.3.0=pyhd3eb1b0_0
-  - ca-certificates=2021.1.19=haa95532_1
-  - certifi=2020.12.5=py38haa95532_0
+  - ca-certificates=2020.12.5=h5b45459_0
+  - certifi=2020.12.5=py38haa244fe_1
   - cffi=1.14.5=py38hcd4344a_0
   - colorama=0.4.4=pyhd3eb1b0_0
   - cpuonly=1.0=0
-  - cudatoolkit=11.1.1=heb2d755_7
+  - cudatoolkit=10.2.89=h74a9793_1
   - cycler=0.10.0=py38_0
   - decorator=4.4.2=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
   - entrypoints=0.3=py38_0
-  - freetype=2.10.4=h546665d_1
+  - freetype=2.10.4=hd328e21_0
   - icu=58.2=ha925a31_3
   - importlib-metadata=3.7.3=py38haa95532_1
   - importlib_metadata=3.7.3=hd3eb1b0_1
-  - intel-openmp=2020.3=h57928b3_311
+  - intel-openmp=2020.2=254
   - ipykernel=5.3.4=py38h5ca1d4c_0
   - ipython=7.21.0=py38hd4e2768_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - jedi=0.17.0=py38_0
   - jinja2=2.11.3=pyhd3eb1b0_0
+  - joblib=1.0.1=pyhd8ed1ab_0
   - jpeg=9b=hb83a4c4_2
   - jsonschema=3.2.0=py_2
   - jupyter_client=6.1.7=py_0
   - jupyter_core=4.7.1=py38haa95532_0
   - jupyterlab_pygments=0.1.2=py_0
   - kiwisolver=1.3.1=py38hd77b12b_0
-  - libblas=3.9.0=8_mkl
-  - libcblas=3.9.0=8_mkl
-  - liblapack=3.9.0=8_mkl
-  - liblapacke=3.9.0=8_mkl
-  - libpng=1.6.37=h1d00b33_2
+  - libblas=3.9.0=1_h8933c1f_netlib
+  - libcblas=3.9.0=3_hd5c7e75_netlib
+  - liblapack=3.9.0=3_hd5c7e75_netlib
+  - libpng=1.6.37=h2a8f88b_0
   - libsodium=1.0.18=h62dcd97_0
-  - libtiff=4.1.0=h56a325e_1
-  - libuv=1.41.0=h8ffe710_0
-  - lz4-c=1.9.3=h8ffe710_0
+  - libtiff=4.2.0=hd0e1b90_0
+  - libuv=1.40.0=he774522_0
+  - lz4-c=1.9.3=h2bbff1b_0
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
@@ -55,19 +54,21 @@ dependencies:
   - matplotlib=3.3.4=py38haa95532_0
   - matplotlib-base=3.3.4=py38h49ac443_0
   - mistune=0.8.4=py38he774522_1000
-  - mkl=2020.4=hb70f87d_311
-  - mkl-devel=2020.4=h57928b3_312
-  - mkl-include=2020.4=hb70f87d_311
+  - mkl=2020.2=256
+  - mkl-service=2.3.0=py38h196d8e1_0
+  - mkl_fft=1.3.0=py38h46781fe_0
+  - mkl_random=1.1.1=py38h47e9c7a_0
   - msys2-conda-epoch=20160418=1
   - nbclient=0.5.3=pyhd3eb1b0_0
   - nbconvert=6.0.7=py38_0
   - nbformat=5.1.2=pyhd3eb1b0_1
   - nest-asyncio=1.5.1=pyhd3eb1b0_0
-  - ninja=1.10.2=h5362a0b_0
+  - ninja=1.10.2=py38h6d14046_0
   - notebook=6.2.0=py38haa95532_0
-  - numpy=1.20.1=py38h0cc643e_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1j=h2bbff1b_0
+  - numpy=1.19.2=py38hadc3359_0
+  - numpy-base=1.19.2=py38ha3acd2a_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1j=h8ffe710_0
   - packaging=20.9=pyhd3eb1b0_0
   - pandas=1.2.3=py38hf11a4ad_0
   - pandoc=2.12=haa95532_0
@@ -77,7 +78,7 @@ dependencies:
   - pillow=8.1.2=py38h4fa10fc_0
   - pip=21.0.1=py38haa95532_0
   - prometheus_client=0.9.0=pyhd3eb1b0_0
-  - prompt-toolkit=3.0.8=py_0
+  - prompt-toolkit=3.0.17=pyh06a4308_0
   - pycparser=2.20=py_2
   - pygments=2.8.1=pyhd3eb1b0_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
@@ -86,12 +87,14 @@ dependencies:
   - python=3.8.8=hdbf39b2_4
   - python-dateutil=2.8.1=pyhd3eb1b0_0
   - python_abi=3.8=1_cp38
-  - pytorch=1.8.0=py3.8_cpu_0
+  - pytorch=1.7.0=py3.8_cpu_0
   - pytz=2021.1=pyhd3eb1b0_0
   - pywin32=227=py38he774522_1
   - pywinpty=0.5.7=py38_0
   - pyzmq=20.0.0=py38hd77b12b_1
   - qt=5.9.7=vc14h73c81de_0
+  - scikit-learn=0.24.1=py38ha09990b_0
+  - scipy=1.6.1=py38h5f893b4_0
   - send2trash=1.5.0=pyhd3eb1b0_1
   - setuptools=52.0.0=py38haa95532_0
   - sip=4.19.13=py38ha925a31_0
@@ -99,12 +102,13 @@ dependencies:
   - sqlite=3.35.2=h2bbff1b_0
   - terminado=0.9.3=py38haa95532_0
   - testpath=0.4.4=pyhd3eb1b0_0
-  - tk=8.6.10=h8ffe710_1
-  - torchaudio=0.8.0=py38
-  - torchvision=0.9.0=py38_cpu
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tk=8.6.10=he774522_0
+  - torchaudio=0.7.0=py38
+  - torchvision=0.8.0=py38_cpu
   - tornado=6.1=py38h2bbff1b_0
   - traitlets=5.0.5=pyhd3eb1b0_0
-  - typing_extensions=3.7.4.3=py_0
+  - typing_extensions=3.7.4.3=pyha847dfd_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wcwidth=0.2.5=py_0
@@ -112,23 +116,45 @@ dependencies:
   - wheel=0.36.2=pyhd3eb1b0_0
   - wincertstore=0.2=py38_0
   - winpty=0.4.3=4
-  - xz=5.2.5=h62dcd97_1
+  - xz=5.2.5=h62dcd97_0
   - zeromq=4.3.3=ha925a31_3
   - zipp=3.4.1=pyhd3eb1b0_0
-  - zlib=1.2.11=h62dcd97_1010
-  - zstd=1.4.9=h6255e5f_0
+  - zlib=1.2.11=h62dcd97_4
+  - zstd=1.4.5=h04227a9_0
   - pip:
+    - absl-py==0.12.0
+    - aiohttp==3.7.4.post0
+    - async-timeout==3.0.1
+    - cachetools==4.2.1
     - chardet==4.0.0
     - click==7.1.2
+    - dataclasses==0.6
     - filelock==3.0.12
+    - fsspec==0.8.7
+    - future==0.18.2
+    - google-auth==1.28.0
+    - google-auth-oauthlib==0.4.3
+    - grpcio==1.36.1
     - idna==2.10
-    - joblib==1.0.1
-    - pyyaml==5.4.1
+    - markdown==3.3.4
+    - multidict==5.1.0
+    - oauthlib==3.1.0
+    - protobuf==3.15.6
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pytorch-lightning==1.2.0
+    - pyyaml==5.3.1
     - regex==2021.3.17
     - requests==2.25.1
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
     - sacremoses==0.0.43
+    - tensorboard==2.4.1
+    - tensorboard-plugin-wit==1.8.0
     - tokenizers==0.10.1
     - tqdm==4.59.0
     - transformers==4.4.2
     - urllib3==1.26.4
+    - werkzeug==1.0.1
+    - yarl==1.6.3
 prefix: C:\Users\z\anaconda3\envs\innovation
