update sth unfinished.

--- a/user_data/configs/bert-base-multilingual-uncased.yml
+++ b/user_data/configs/bert-base-multilingual-uncased.yml
@@ -5,6 +5,7 @@ dataset:
 model:
   name: bert-base-multilingual-uncased
   hidden_size: 768
+  pretrained_model_path: user_data/checkpoints/pretrain/
 
 solver:
   seed: 0
@@ -19,5 +20,6 @@ solver:
   train_initial_lr: 2.0e-5           # for train
   lr_schedule: get_linear_schedule_with_warmup
   warmup_fraction: 0.06
-  num_epochs: 50
+  pretrain_num_epochs: 50
+  train_num_epochs: 2
   max_grad_norm: 1.0
